# tum-adv-prog

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  calculateStocks  cmake_install.cmake  group_80  optimization.md  performance.md  trading-market-simulation.md
data/: stocks.csv
include/: FileReader.h  InputWallet.h  StdInReader.h  Stock.h  Strategy.h  Wallet.h  market_simulator.h
optimization_documentation/QBC_CEC_Analysis/: CEC_Stock_optimization.cpp  CEC_Strategy_optimization.cpp  CEC_Wallet_optimization.cpp  QBC_Stock_runtime.cpp  QCB_Strategy_runtime.cpp  QCB_Wallet_runtime.cpp
optimization_documentation/gprof_Analysis/: Makefile  Profiling_with_gprof.md  gmon_after.out  gmon_before.out  profile_report_gprof.txt  profile_report_gprof_new_generator.txt
optimization_documentation/performance_test/: details_of_perf_outptut.md  env.txt  test_script_1.exp  test_script_2.exp
src/: FileReader.cpp  InputWallet.cpp  StdInReader.cpp  Stock.cpp  Strategy.cpp  Wallet.cpp  main.cpp  market_simulator.cpp
